# pandas2tensorboard

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml  release-drafter.yml  release.yml
example/: example.py
pandas2tensorboard/: __init__.py  pandas2tensorboard.py
pandas2tensorboard/test/: __init__.py  test_transformer.py
