[tool.poetry]
name = "pandas2tensorboard"
version = "0.1.0"
description = "Pandas DataFrames converted to TensorBoard Format"
authors = ["Anselm Hahn <Anselm.Hahn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.0"
modin = { version = "^0.13.0", optional = true }
torch = "^1.10.2"
tensorboard = "^2.8.0"
dask = { version = "^2022.1.1", optional = true }
intake-omnisci = { version = "^0.1.0", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
seaborn = "^0.11.2"

[tool.poetry.extras]
modin = ["modin"]
backend = ["dask", "intake-omnisci"]
all = ["modin", "dask", "intake-omnisci"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
